@@ -14,7 +14,7 @@ public class TestNGProject6 extends BaseClass { // SampleTestTNG10
  	
 	@Test
 	private void tc3() {
-		System.out.println("Tc3 : " + Thread.currentThread().getId());
+		System.out.println("Tc3 : " + Thread.currentThread().threadId()); //threadId() = Java 19+ --- getId() = Java <18 version
 		WebDriverManager.chromedriver().setup();
 		WebDriver driver = new ChromeDriver();
 		driver.get("https://www.amazon.in/");
@@ -24,7 +24,7 @@ public class TestNGProject6 extends BaseClass { // SampleTestTNG10
 
 	@Test
 	private void tc2() {
-		System.out.println("Tc2 : " + Thread.currentThread().getId());
+		System.out.println("Tc2 : " + Thread.currentThread().threadId());
 		WebDriverManager.chromedriver().setup();
 		WebDriver driver = new ChromeDriver();
 		driver.get("https://en-gb.facebook.com/");
@@ -36,7 +36,7 @@ public class TestNGProject6 extends BaseClass { // SampleTestTNG10
 
 	@Test
 	private void tc1() {
-		System.out.println("Tc1 : " + Thread.currentThread().getId());
+		System.out.println("Tc1 : " + Thread.currentThread().threadId());
 		WebDriverManager.chromedriver().setup();
 		WebDriver driver = new ChromeDriver();
 		driver.get("https://www.redbus.com/");
